--- a/horrorinc/Base.lproj/Main.storyboard
+++ b/horrorinc/Base.lproj/Main.storyboard
@@ -47,30 +47,28 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wua-Jc-2Y5" userLabel="white line">
                                 <rect key="frame" x="186" y="119.99999999999999" width="3" height="186.66666666666663"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="3" id="6rd-Hq-aFe"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="michael" translatesAutoresizingMaskIntoConstraints="NO" id="L7T-uP-M6b" userLabel="michael">
-                                <rect key="frame" x="8" y="122.99999999999999" width="177" height="186.66666666666663"/>
+                                <rect key="frame" x="8" y="122.99999999999999" width="223" height="186.66666666666663"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bubba" translatesAutoresizingMaskIntoConstraints="NO" id="abO-sH-m22">
-                                <rect key="frame" x="186" y="122.99999999999999" width="181" height="186.66666666666663"/>
+                                <rect key="frame" x="143" y="122.99999999999999" width="224" height="186.66666666666663"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WHf-LZ-fiG" userLabel="white line 2">
                                 <rect key="frame" x="186" y="150.00000000000003" width="3" height="373.66666666666674"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="3" id="J7b-wp-L8Q"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="freddy" translatesAutoresizingMaskIntoConstraints="NO" id="7z2-rp-lnn">
-                                <rect key="frame" x="8" y="335.33333333333331" width="181" height="186.99999999999994"/>
+                                <rect key="frame" x="8" y="335.66666666666669" width="225" height="187.00000000000006"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ghostface" translatesAutoresizingMaskIntoConstraints="NO" id="tPl-t7-uzZ">
-                                <rect key="frame" x="186" y="335" width="181" height="187"/>
+                                <rect key="frame" x="145" y="334.66666666666669" width="222" height="187.00000000000006"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AQG-7B-BM0">
                                 <rect key="frame" x="67" y="548" width="240" height="128"/>
@@ -115,6 +113,14 @@
                             <constraint firstItem="ht2-dp-ZCY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xjX-bY-m5g"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <exclude reference="oGR-wy-OKR"/>
+                                <exclude reference="ScD-vr-iJC"/>
+                                <exclude reference="hp3-qq-gHB"/>
+                                <exclude reference="sRw-WX-54H"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
